--- a/Pre_Bootcamp_Week2/Day_1/style.css
+++ b/Pre_Bootcamp_Week2/Day_1/style.css
@@ -116,3 +116,15 @@ body {
 .Social {
     text-align: center;
 }
+
+.th {
+    background-color: darkgray;
+}
+
+.td {
+    background-color: blueviolet;
+}
+
+.doug {
+    background-color: aqua;
+}
